--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
         <version>8.0.33</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.tomas-langer</groupId>
+      <artifactId>chalk</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
